fix: horizontal layout shift due to scrollbar Appearance and disappearance of the scrollbar is causing a layout shift. Opted for an easier fix for now by always showing a scrollbar even if the page is not scrollable!

--- a/src/globals.css
+++ b/src/globals.css
@@ -7,6 +7,13 @@
     @apply box-border list-none p-0 m-0;
   }
 
+  /* easy-fix for now: always showing vertical scrollbar to avoid the horizontal layout shift 
+  (considered alternative solutions:- 'scrollbar-gutter' not supported widely and is pretty much same as showing a scrollbar 
+  or https://maxschmitt.me/posts/react-prevent-layout-shift-body-scrollable!) */
+  html {
+    overflow-y: scroll;
+  }
+
   a,
   input,
   button,
